Fix reward image sizing and alignment for Safari

--- a/output.css
+++ b/output.css
@@ -78,6 +78,9 @@
 .h-\[256px\] {
   height: 256px;
 }
+.h-\[320px\] {
+  height: 320px;
+}
 .h-\[360px\] {
   height: 360px;
 }
